<resources>
    <string name="app_name">GeoTasks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">1756523087925049</string>

    <string name="action_settings">Settings</string>

    <!--alert_dialog-->
    <string name="alert_dialog_content">Delete the selected task?</string>
    <string name="alert_dialog_positive">Delete</string>
    <string name="alert_dialog_negative">Cancel</string>

    <!--nav_header_main-->
    <string name="name_placeholder">Will Smith</string>
    <string name="email_placeholder">example@example.com</string>

    <!--create_task_activity-->
    <string name="task_name">Task name</string>
    <string name="geofence_radius">Geofence radius:</string>
    <string name="choose_location">Choose location</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="from">From:</string>
    <string name="until">Until:</string>
    <string name="destination">Destination:</string>
    <string name="done">Done</string>
    <string name="units"> meters</string>
    <string name="placeholder">Placeholder</string>
    <string name="log_out_facebook">Log Out</string>

</resources>
