<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.CreateTaskActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/geofence_radius" />


    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:id="@+id/radius_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        app:dsb_indicatorColor="@color/colorAccent"
        app:dsb_indicatorElevation="0dp"
        app:dsb_max="1000"
        app:dsb_min="0"
        app:dsb_progressColor="@color/colorAccent" />


    <Button
        style="@style/createTaskButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="chooseDestination"
        android:text="@string/choose_location" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/start_time"
            style="@style/createTaskButtons"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/end_time"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:onClick="startTime"
            android:text="@string/start_time" />

        <Button
            android:id="@+id/end_time"
            style="@style/createTaskButtons"
            android:layout_width="110dp"

            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="endTime"
            android:text="@string/end_time" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:gravity="bottom">

            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/latitude"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="@string/longitude"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/longitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/destination"
                android:layout_toEndOf="@+id/longitude"
                android:layout_toRightOf="@+id/longitude" />

            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/radius"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="@string/latitude"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/latitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/longitude"
                android:layout_toEndOf="@+id/interval_start"
                android:layout_toRightOf="@+id/interval_start" />

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/until"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="@string/from"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/interval_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/from"
                android:layout_toEndOf="@+id/from"
                android:layout_toRightOf="@+id/from" />


            <TextView
                android:id="@+id/until"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="25dp"
                android:text="@string/until"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/interval_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/until"
                android:layout_toEndOf="@+id/until"
                android:layout_toRightOf="@+id/until" />

            <TextView
                android:id="@+id/radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/from"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="@string/geofence_radius"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/geofence_radius_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/latitude"
                android:layout_toEndOf="@+id/radius"
                android:layout_toRightOf="@+id/radius" />

            <TextView
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/longitude"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="@string/destination"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/destination_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/destination"
                android:layout_toEndOf="@+id/destination"
                android:layout_toRightOf="@+id/destination" />

            <Button
                android:id="@+id/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccent"
                android:onClick="addTask"
                android:text="@string/done"
                android:textColor="#fff" />
        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>
